--- a/devfile.yaml
+++ b/devfile.yaml
@@ -3,6 +3,10 @@ metadata:
   name: ansible-dev-space
   version: 0.1.0
 projects:
+  - name: ansible-examples
+    git:
+      remotes:
+        origin: 'https://github.com/ansible/ansible-examples.git'
   - name: openshift-playbooks
     git:
       remotes:
@@ -18,7 +22,7 @@ projects:
 components:
   - name: ansible
     container:
-      image: quay.io/jwennerberg/ee-ansible-dev:latest
+      image: quay.io/jwennerberg/ansible-dev-image:latest
       memoryLimit: 512Mi
       mountSources: true
       volumeMounts:
@@ -31,16 +35,10 @@ components:
   - name: ansible-volume
     volume: {}
 commands:
-  - id: ansible-terminal-virtual-env
-    exec:
-      component: ansible
-      commandLine: 'TMPFILE=$(mktemp); echo "source ${HOME}/.venv/bin/activate" > $TMPFILE; bash --rcfile $TMPFILE'
-      label: Ansible Terminal (Virtual Env)
-      workingDir: "${PROJECTS_ROOT}"
   - id: create-ansible-role
     exec:
       component: ansible
-      commandLine: 'read -e -p "Enter Role Name: " NAME; source ${HOME}/.venv/bin/activate; ansible-galaxy init --role-skeleton=galaxy-role-skeleton/skeleton_empty $NAME && exit'
+      commandLine: 'read -e -p "Enter Role Name: " NAME; ansible-galaxy init --role-skeleton=galaxy-role-skeleton/skeleton_empty $NAME'
       label: Create Ansible Role
       workingDir: '${PROJECTS_ROOT}'
   - exec:
@@ -50,7 +48,7 @@ commands:
       workingDir: '${HOME}/.ansible'
     id: add-automation-hub-token
   - exec:
-      commandLine: 'read -e -p "Enter Collection Name: " COLLECTION; source ${HOME}/.venv/bin/activate; ansible-galaxy collection install $COLLECTION && exit'
+      commandLine: 'read -e -p "Enter Collection Name: " COLLECTION; ansible-galaxy collection install $COLLECTION'
       component: ansible
       label: Install Collection
       workingDir: '${HOME}'
