--- a/ansible-dev-image/Containerfile
+++ b/ansible-dev-image/Containerfile
@@ -14,6 +14,7 @@ RUN cd /usr/bin \
     && if [ ! -L python-config ]; then ln -s python3.9-config python-config; fi \
     && if [ ! -L pip ]; then ln -s pip-3.9 pip; fi
 
+# TODO: install ansible tooling from AAP repositories instead
 RUN pip install pylint yq ansible-core ansible-lint molecule yamllint
 
 # Set permissions on /etc/passwd and /home to allow arbitrary users to write
