--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.1.0
 metadata:
-  name: ansible-dev-space
+  generateName: ansible-dev-space-
   version: 0.1.0
 projects:
   - name: ansible-examples
