Revert "Generate name"
This reverts commit cc3bb7b03e6c8fa7ca5373243fd98309ff8df779.

--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.1.0
 metadata:
-  generateName: ansible-dev-space-
+  name: ansible-dev-space
   version: 0.1.0
 projects:
   - name: ansible-examples
